# CADML

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md
.github/workflows/: native.yml  wasm.yml
cmake/: CadmlDependencies.cmake
docs/: architecture.md  compiler.md  cookbook.md  csg.md  error-model.md  evaluator.md  exporters.md  implementation-notes.md  lua-embedding.md
docs/spec/: coordinate-system.md  expressions.md  flat-ir.md  language.md  svg-subset.md
examples/: README.md
examples/angle-bracket/: angle-bracket.cadml
examples/bolt-on-plate/: bolt-on-plate.cadml  bolt.cadml  plate.cadml
examples/caster-wheel/: axle.cadml  caster-wheel.cadml  fork.cadml  wheel.cadml
examples/compression-spring/: compression-spring.cadml
examples/compressor/: compressor.cadml  compressor.lua
examples/de-laval-nozzle/: de-laval-nozzle.cadml
examples/demo-l-bracket/: demo-l-bracket.cadml
examples/demo-star/: demo-star.cadml
examples/demo-svg-curves/: demo-svg-curves.cadml
examples/demo-svg-import/: demo-svg-import.cadml
examples/demo-sweep/: demo-sweep.cadml
examples/flange/: flange.cadml
examples/gear/: gear.cadml  gear.lua
examples/hex-bolt/: hex-bolt.cadml
examples/hex-nut/: hex-nut.cadml
examples/mitered-frame/: mitered-frame.cadml
examples/peg-in-hole/: peg-in-hole.cadml
examples/propeller/: propeller.cadml  propeller.lua
examples/showcase-cut-rx-symmetric/: showcase-cut-rx-symmetric.cadml
examples/showcase-fillet-chamfer/: showcase-fillet-chamfer.cadml
examples/showcase-hull/: showcase-hull.cadml
examples/showcase-path/: showcase-path.cadml
examples/stl-import/: apple.cadml  lollipop.cadml  sphere.stl
examples/v-belt-pulley/: v-belt-pulley.cadml
src/cadml/: CMakeLists.txt
src/cadml/include/cadml/: base64.hpp  constants.hpp  expression.hpp  lua.hpp  parser.hpp  selector.hpp  serializer.hpp  sha256.hpp  types.hpp
src/cadml/src/: base64.cpp  expression.cpp  lua.cpp  math.cpp  parser_body.cpp  parser_frontmatter.cpp  selector.cpp  serializer.cpp  sha256.cpp  types.cpp
src/cadml/tests/: test_base64.cpp  test_expression.cpp  test_lua.cpp  test_math.cpp  test_parser_body.cpp  test_parser_frontmatter.cpp  test_parser_full.cpp  test_selector.cpp  test_serializer.cpp  test_sha256.cpp  test_types.cpp
src/cadml_compile/: CMakeLists.txt
src/cadml_compile/include/cadml/compile/: bundler.hpp
src/cadml_compile/src/: assembly_compiler.cpp  assembly_compiler.hpp  bundler.cpp  lua_string_eval.cpp  lua_string_eval.hpp  source_provider.hpp  subtree_ops.cpp  subtree_ops.hpp  unrollers.cpp  unrollers.hpp
src/cadml_compile/tests/: test_assembly_compiler.cpp  test_bundler.cpp  test_dotted_port_paths.cpp  test_for_unroller.cpp  test_imports.cpp  test_in_memory.cpp  test_lua_imports.cpp  test_param_validation.cpp  test_pattern_unroller.cpp  test_port_alignment.cpp  test_subtree_ops.cpp
src/cli/: CMakeLists.txt  cadml_bounds_main.cpp  cadml_build_main.cpp  cadml_check_main.cpp  cadml_compile_main.cpp  cadml_diff_main.cpp  cadml_holes_main.cpp  cadml_lsp_main.cpp  cadml_mass_main.cpp  cadml_measure_main.cpp  cadml_to_3mf_main.cpp  cadml_to_stl_main.cpp  cadml_topo_main.cpp  cadml_walls_main.cpp  cli_panic.hpp
src/engine/: CMakeLists.txt  README.md
src/engine/include/cadml/engine/: flat_3mf.hpp  flat_analysis.hpp  flat_check.hpp  flat_color.hpp  flat_evaluator.hpp  flat_stl.hpp
src/engine/src/: flat_3mf.cpp  flat_analysis.cpp  flat_check.cpp  flat_color.cpp  flat_edge_topology.cpp  flat_edge_topology.hpp  flat_evaluator.cpp  flat_geometry.cpp  flat_geometry.hpp  flat_gltf.cpp  flat_mesh_cache.cpp  flat_mesh_cache_internal.hpp  flat_modifier_tolerances.hpp  flat_stl.cpp  flat_stl_import.cpp  flat_stl_import.hpp
src/engine/tests/: test_flat_analysis.cpp  test_flat_color.cpp  test_flat_evaluator.cpp
src/wasm/: CMakeLists.txt  README.md  cadml_wasm.cpp  test_cadml_wasm.cjs
tests/: CMakeLists.txt
tests/examples/: CMakeLists.txt  example-metrics.txt  example_metrics.hpp  regen_example_metrics.cpp  test_examples_compile.cpp  test_examples_metrics.cpp
tests/fixtures/: circular_a.cadml  circular_b.cadml  import_target.cadml
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Editor.tsx  Icons.tsx  RevealSlider.tsx  Showcase.tsx  Viewport.tsx
web/data/: examples.ts
web/lib/: cadml-diagnostics.ts  cadml-monarch.ts  cadml-version.ts  cadml.ts  stl.ts
web/public/wasm/: cadml-0.1.js  cadml-0.1.wasm  cadml-0.2.js  cadml-0.2.wasm
web/scripts/: wasm-refresh.mjs
